--- a/styles/utils.css
+++ b/styles/utils.css
@@ -12,8 +12,8 @@
 .upper-case {
   text-transform: uppercase;
 }
-.space-between {
-  justify-content: space-between;
+.space-around {
+  justify-content: space-around;
 }
 .mx-2 {
   margin-right: 12px;
