--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html,body{
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 header{
     position: sticky;
     top: 0;
     background-color: white;
-    /* height: 40px; */
-
+    height: 69px;
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    font-size: 0.8em;
+    font-weight: bolder;
 }
 .left img{
     height: 50px;
-}
-.container{
-    padding: 0vw 5vw;
-    margin: auto;
 }
 nav ul li{
     list-style: none;
@@ -23,5 +28,59 @@ nav ul li{
 }
 .sec-1{
     background-color: aliceblue;
-    height: 122vh;
+}
+.search{
+    width: 30vw;
+    padding: 10px 12px;
+    border-radius: 5px;
+    border-style: none;
+    background-color: rgb(240, 240, 240);
+}
+.sec-1 img{
+    max-width: 100%;
+}
+.sec-2 div{
+    flex-wrap: wrap;
+}
+.sec-2 img{
+    height: 15em;
+}
+h4{
+    color: #3e4152;
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: 0.15;
+    margin: 50px 0 10px 30px;
+  }
+footer{
+    padding: 25px;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 24%)0px 3px 8px;
+}
+
+@media (max-width: 900px){
+    nav{
+        flex-direction: column;
+    }
+    header{
+        
+        height: 132px;
+        padding-bottom: 20px;
+    }
+    .flex{
+        justify-content: space-around;
+    }
+    nav ul{
+        flex-wrap: wrap;
+    }
+    nav ul li{
+        padding:10px 10px;
+    }
+    h4{
+        font-size: 1.2em;
+        margin: 40px 0px 10px 15px;
+    }
+    .right>div{
+        flex-direction: column;
+    }
 }
